--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,18 @@ src: url("Saol Text Light.otf");
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
+.articles3 {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+}
+.articles4 {
+    display: grid;
+    grid-template-columns: 3fr 6fr;
+    border-bottom: 1px solid #000000;
+    
+}
 .article{
+    display:grid;
     padding:10px;
     border-right: 1px solid #000000;
     border-bottom: 1px solid #000000;
@@ -51,10 +62,46 @@ src: url("Saol Text Light.otf");
 .article1{
     padding:10px;
     border-bottom: 1px solid #000000;
+}
+.article2{
+    padding:10px;
+    border-bottom: 1px solid #000000;
+    border-right: 1px solid #000000;
+    position: relative;
+}
+.article3{
+    padding:10px;
+    position: relative;
+    border-bottom: 1px solid #000000;
+}
+.article4{
+    padding:10px;
+    border-right: 1px solid #000000;
+    position: relative;
+}
+.article5{
+    padding:10px;
+    border-right: 1px solid #000000;
+    position: relative;
+}
+.article6{
+    padding:10px;
+    border-right: 1px solid #000000;
+    position: relative;
+}
+.article7{
+    padding:10px;
     position: relative;
 }
 h1 {font-family: 'Arial';
-    font-size:40px;
+    font-size:70px;
+}
+h2  {font-family: 'Arial';
+    font-size:70px;
+}
+h3  {font-family: 'Saol Text Light Italic';
+    font-size:50px;
+    text-align: center;
 }
 n1{font-family: 'Mazama';
     font-size:100px;
@@ -113,7 +160,7 @@ n8{font-family: 'Mazama';
     opacity: 0.5;   
 }
 p1 {font-family: 'Saol Text Light';
-    font-size:15px;
+    font-size:20px;
 }
 p2{font-family: 'Saol Text Light Italic';
     font-size:15px;
@@ -121,20 +168,49 @@ p2{font-family: 'Saol Text Light Italic';
 p3{font-family: 'Saol Text Light Italic';
     font-size:13px;
 }
+p4 {
+    font-family: 'Saol Text Light';
+    font-size:15px;
+    padding:10px;
+    position: relative;
+}
 img{
     width: 100%;
 }
 video{
     width: 100%;
+    height:auto;
 }
 header {
     font-family: 'Mazama';
     padding: 4px;
-    font-size: 100px;
+    font-size: 150px;
     text-align: center;
     letter-spacing: -.02em;
     line-height:1;
     border-bottom: 1px solid #000000; 
     margin-top: 15px;
     color: black;
+}
+.collapsible {
+  background-color:white;
+  cursor: pointer;
+  padding: 4px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+ border-bottom: 1px solid #000000;
+}
+.content {
+margin-top: 15px;
+margin-left: 15px;
+margin-right:15px;
+margin-bottom: 15px;
+  padding: 40spx;
+  display: none;
+  overflow: hidden;
+  background-color: white;
+ border-bottom: 1px solid #000000;
 }
