--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,7 @@ header {
     border-bottom: 1px solid #000000; 
     margin-top: 15px;
     color: black;
+    width: auto;
 }
 .collapsible {
   background-color:white;
